fixed visibility of  resizable icon

--- a/DTCD-WorkspaceSystem/src/styles/panel.css
+++ b/DTCD-WorkspaceSystem/src/styles/panel.css
@@ -101,5 +101,5 @@
   cursor: pointer;
 }
 .ui-resizable-handle {
-  z-index: 15000 !important;
+  z-index: 1500 !important;
 }
